[package]
name = "precompile-utils-tests-external"
authors = { workspace = true }
edition = "2021"
version = "0.1.0"

[lib]
path = "./lib.rs"

[dependencies]
evm = { workspace = true, features = ["with-codec"] }
hex-literal = { workspace = true }
scale-codec = { package = "parity-scale-codec", version = "3.6.4", features = [ "max-encoded-len"], default-features = false }
scale-info = { workspace = true, features = ["derive"] }
# Substrate
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
# Substrate FRAME
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-balances = { workspace = true, features = ["insecure_zero_ed"] }
pallet-timestamp = { workspace = true }
# Frontier
fp-evm = { workspace = true }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"] }
precompile-utils = { workspace = true, features = ["testing"] }
