[package]
name = "frontier-template-test-client"
version = "0.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
license = "GPL-3.0"
publish = false

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.0" }
sp-runtime = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn3" }
sp-api = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn3" }
sc-executor = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn3" }
sc-light = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn3" }
sc-consensus = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn3" }
sc-client-api = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn3" }
substrate-test-client = { git = "https://github.com/selendra/substrate", branch = "0.1.0-tn3" }
frontier-template-runtime = { path = "../../runtime" }
